doc/2.8/_sources/reference/generated/ak.min.rst.txt
ak.min
------

.. py:module: ak.min

Defined in `awkward.operations.ak_min <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_min.py>`__ on `line 24 <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_min.py#L24>`__.

.. py:function:: ak.min(array, axis=None, *, keepdims=False, initial=None, mask_identity=True, highlevel=True, behavior=None, attrs=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param axis: If None, combine all values from the array into
             a single scalar result; if an int, group by that axis: ``0`` is the
             outermost, ``1`` is the first level of nested lists, etc., and
             negative ``axis`` counts from the innermost: ``-1`` is the innermost,
             ``-2`` is the next level up, etc; if a str, it is interpreted as the
             name of the axis which maps to an int if named axes are present.
             Named axes are attached to an array using :py:obj:`ak.with_named_axis` and
             removed with :py:obj:`ak.without_named_axis`; also see the
             `Named axes user guide <../../user-guide/how-to-array-properties-named-axis.html>`__.
    :type axis: None or int or str
    :param keepdims: If False, this reducer decreases the number of
                 dimensions by 1; if True, the reduced values are wrapped in a new
                 length-1 dimension so that the result of this operation may be
                 broadcasted with the original array.
    :type keepdims: bool
    :param initial: The maximum value of an output element, as
                an alternative to the numeric type's natural identity (e.g. infinity
                for floating-point types, a maximum integer for integer types).
                If you use ``initial``, you might also want ``mask_identity=False``.
    :type initial: None or number
    :param mask_identity: If True, reducing over empty lists results in
                      None (an option type); otherwise, reducing over empty lists
                      results in the operation's identity.
    :type mask_identity: bool
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict
    :param attrs: Custom attributes for the output array, if
              high-level.
    :type attrs: None or dict

Returns the minimum value in each group of elements from ``array`` (many
types supported, including all Awkward Arrays and Records). The identity
of minimization is ``inf`` if floating-point or the largest integer value
if applied to integers. This identity is usually masked: the minimum of
an empty list is None, unless ``mask_identity=False``.
This operation is the same as NumPy's
`amin <https://docs.scipy.org/doc/numpy/reference/generated/numpy.amin.html>`__
if all lists at a given dimension have the same length and no None values,
but it generalizes to cases where they do not.

See :py:obj:`ak.sum` for a more complete description of nested list and missing
value (None) handling in reducers.

See also :py:obj:`ak.nanmin`.

